    - ListBox raises an action event when double-clicked.
    - ListBox ignores double-clicks that occur across multiple items.
    - Removed unused Gadget::_doubleClickTime member.
    - ListBox redraws every time data changes.
    - Double-click only counted as such if the gadget already has focus (ie.
      must be the same gadget clicked twice).
  
  
  - New Features:
    - Split ListData class into ListData and ListDataItem classes for greater
      flexibility.
    - Minor improvements to the ListBox's use of the ListData class.
    - Altered ListData::quickSort() and added compareTo() method to ListDataItem
      to allow custom ordering of ListDataItem subclasses.
    - ScrollingBase adds support for specifying planes on which scrolling can
      occur.
    - ScrollingPanel implements ScrollingBase's allow/disallow scroll plane
      features to prevent scrolling on certain planes.
    - ListBox does not allow horizontal scrolling.
    - Added windowless example project.
    - Added Gadget::isDoubleClick() to check for double-clicks.
    - Combined various colour members in Gadget class into GadgetColours struct.


  V0.41 (20091124)
  
  - Fixes:
    - Removed Gadget::unregisterChildrenFromVBL() declaration from gadget.h as
      the function does not exist.
    - Graphics::dim() draws to correct dimensions.
    - GraphicsPort::dim() clips properly.
    - BitmapButton::getPreferredDimensions() returns the correct size.
    - AnimButton::getPreferredDimensions() returns the correct size.
    - Anim button animation continues playing correctly when clicked if
      disabled.
    - ListBox::getPreferredDimensions() returns the correct size.
    - ListBox::draw() clips more effectively.
    - Removed getEditableData() bodge from bitmap classes; all interaction with
      bitmap data happens through bitmap methods.
    - Moved IK bitmaps out of demo folder/NDS into animbutton test.
    - ScrollingListBox::getPreferredDimensions() returns the correct size.