@@ -64,6 +64,8 @@ void ScrollingListBoxTest::startup() {
 
 	// Add cycle button
 	_listBox = new ScrollingListBox(30, 30, 100, 20);
+	
+	for (u8 i = 0; i < 20; ++i) {
 	_listBox->addOption("Option 1", 1);
 	_listBox->addOption("Option 2", 2);
 	_listBox->addOption("Option 3", 3);
@@ -94,6 +96,7 @@ void ScrollingListBoxTest::startup() {
 	_listBox->addOption("Option 28", 28);
 	_listBox->addOption("Option 29", 29);
 	_listBox->addOption("Option 30", 30);
+	}
 	window->addGadget(_listBox);
 	_listBox->addGadgetEventHandler(this);
 	_listBox->setDoubleClickable(true);
